--- a/src/pages/newUser/newUser.css
+++ b/src/pages/newUser/newUser.css
@@ -44,7 +44,7 @@
     border-radius: 5px;
 }
 
-.newUserBottom {
+.newUserButton {
     width: 200px;
     border: none;
     background-color: darkblue;
