--- a/src/pages/movie/movie.css
+++ b/src/pages/movie/movie.css
@@ -62,6 +62,10 @@
     display: flex;
     justify-content: space-between;
   }
+
+  .productInfiKey {
+    margin-right: 20px;
+  }
   
   .productInfoValue {
     font-weight: 300;
